# test_django_react

./: README.md  pyproject.toml
backend/backend/: settings.py
