[tool.poetry]
name = "test_django_react"
version = "0.1.0"
description = ""
authors = ["Marc Puig <marc.puig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.3"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
